idea/testData/multiModuleHighlighting/hierarchicalExpectActualMatching/implicitlyDuplicatedActuals/jvm/jvm.kt
package foo

actual class CompatibleInMiddleActualInJvm

class <!ACTUAL_MISSING!>CompatibleInMiddleAndPlatforms<!>